@@ -8,6 +8,9 @@
 ## IntelliJ IDEA ( https://www.jetbrains.com/idea/
 ##
 ## In order to setup JavaFX project, follow the instruction on this link: (https://openjfx.io/openjfx/docs/#introduction)
+#
+## For VM options : --module-path "path-to-openjfx-lib-folder" --add-modules javafx.controls,javafx.fxml
+#
 
 
 ![](images/tipcalculato1.JPG)
